functional with large files
