# resources/views/mail/reconciliation-completed.blade.php
@@ -1,3 +1,5 @@
 <div>
     <!-- I have not failed. I've just found 10,000 ways that won't work. - Thomas Edison -->
+    <h2>Your reconciliation is ready</h2>
+    <p>The results are in the CSV file attached to this email.</p>
 </div>
