# storage/api-docs/api-docs.json
@@ -1925,124 +1925,6 @@
                 }
             }
         },
-        "/api/v1/reconcile-test": {
-            "post": {
-                "tags": [
-                    "Reconciliation"
-                ],
-                "summary": "New Reconciliation Approach - Recox",
-                "description": "Upload and compare two files using various reconciliation methods",
-                "operationId": "cd8ca76d9c02783c8e44032edbbc7b5f",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "bank_statement",
-                                    "ledger"
-                                ],
-                                "properties": {
-                                    "bank_statement": {
-                                        "description": "Bank Statement CSV file",
-                                        "type": "string",
-                                        "format": "binary"
-                                    },
-                                    "ledger": {
-                                        "description": "Ledger CSV file",
-                                        "type": "string",
-                                        "format": "binary"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful reconciliation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Reconciliation successful"
-                                        },
-                                        "status": {
-                                            "type": "string",
-                                            "example": "success"
-                                        },
-                                        "status_code": {
-                                            "type": "integer",
-                                            "example": 200
-                                        },
-                                        "data": {
-                                            "properties": {
-                                                "matches": {
-                                                    "type": "integer",
-                                                    "example": 5
-                                                },
-                                                "unmatched_statements": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object"
-                                                    }
-                                                },
-                                                "unmatched_ledgers": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object"
-                                                    }
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "type": "string"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Validation error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "type": "string"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/api/v1/reconcile-embeddings": {
             "post": {
                 "tags": [
